댓글에 사진 첨부 가능하도록